--- a/notebooks/00_01_Introduction_to_the_Course.ipynb
+++ b/notebooks/00_01_Introduction_to_the_Course.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "00.01_Introduction to the Course",
       "provenance": [],
-      "authorship_tag": "ABX9TyPxgHDKC0ms8v18w9FqJl7+",
+      "collapsed_sections": [],
+      "authorship_tag": "ABX9TyMlG9iM12JJrF1qC2QxAm9l",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -28,12 +29,21 @@
       ]
     },
     {
-      "cell_type": "code",
+      "cell_type": "markdown",
       "metadata": {
-        "id": "B2c0db_UGyPA"
+        "id": "GqMFIJ1KHgoq"
       },
       "source": [
-        "This is a new notebook"
+        "this is a changed notebook\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "P8THmCGWHkqh"
+      },
+      "source": [
+        ""
       ],
       "execution_count": null,
       "outputs": []
